--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,22 @@
 * {
   box-sizing: border-box;
-}
-.site-header {
-  font-family: consolas;
-  border: 20px solid #11000d;
-  border-radius: 25px;
-  text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
+.site-header {
+  font-family: consolas;
+  border: 10px solid #11000d;
+  text-align: center;
+  background-color: #ffdd83;
+  border-radius: 25px;
+  height: 100px;
+  text-align: center;
+  box-shadow: 5px 5px 50px rgb(200, 245, 3);
+}
+.body {
+  background-color: #00235b;
+}
 main {
   display: flex;
   border-radius: 20px;
@@ -19,11 +28,45 @@ main {
   text-align: center;
   margin: 15px;
   position: relative;
-  background-color: greenyellow;
+  background-color: #e21818;
+}
+.profile__container {
+  border: solid red;
+  text-align: center;
+  margin: 15px;
+  position: relative;
+  background-color: wheat;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.profile__container__about-me {
+  border: solid red;
+  text-align: center;
+  margin: 15px;
+  position: relative;
+  background-color: wheat;
+  display: flex;
+}
+.counters {
+  display: flex;
+  justify-content: space-evenly;
+}
+.profilicon {
+  width: 150px;
+  height: 80px;
+}
+.question-counter {
+  border: solid red;
+  margin: 15px;
+}
+.bookmark-counter {
+  border: solid red;
+  margin: 15px;
 }
 button {
   border: solid 3px solid brown;
-  background: #eee;
+  background: #ffdd83;
   padding: 10px 10px;
 }
 
@@ -40,42 +83,33 @@ button span {
 }
 .tagsr {
   border: solid blue;
+  border-radius: 100%;
+  border-style: dotted;
   background-color: rgb(140, 140, 170);
   margin: 5px;
   color: black;
   list-style: none;
+  font-weight: 900;
+  font-family: ro;
 }
-footer {
-  justify-content: center;
+.nav-bar {
   position: fixed;
+  box-shadow: 5px 5px 50px black;
   bottom: 0;
   padding: 0;
   width: 100%;
   height: 10vh;
-  background: #555;
-  color: #f1f1f1;
+  background: #ffdd83;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: space-between;
   z-index: 1;
   display: flex;
 }
-.footer__container {
-  display: flex;
+.footer__link {
+  text-align: center;
+  width: 100%;
+  padding: 15px;
 }
-.footer__box {
-  border: solid 10px orangered;
-  border-radius: 20px;
-  object-fit: fill;
-  justify-content: space-evenly;
-  background: rgb(2, 236, 253);
-}
-.footer__box img {
-  height: 80%;
-}
-a {
-  color: inherit;
-}
-
-li div {
-  padding: 1em;
+.footer__link:hover {
+  background-color: #98dfd6;
 }
