--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ main {
   align-items: center;
 }
 .profile__container__about-me {
-  border: solid red;
+  border: solid none;
   text-align: left;
   margin: 15px;
   position: relative;
@@ -61,11 +61,31 @@ main {
 .question-counter {
   border: solid red;
   margin: 15px;
+  font-size: xx-large;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #8f43ee;
 }
 .bookmark-counter {
   border: solid red;
   margin: 15px;
+  font-size: xx-large;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #8f43ee;
 }
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+/* rounded slider */
 button {
   border: solid 3px solid brown;
   background: #ffdd83;
