--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,13 @@ main {
   border-radius: 20px;
   flex-direction: column;
   margin: 20px;
+  padding: 20px;
 }
 .card__container {
   border: solid red;
   text-align: center;
   margin: 15px;
+  padding: 25px;
   position: relative;
   background-color: #8f43ee;
 }
@@ -91,7 +93,8 @@ main {
 button {
   border: solid 3px solid brown;
   background: #ffdd83;
-  padding: 10px 10px;
+  padding: 10px;
+  margin-top: 20px;
 }
 
 .card__bookmark {
@@ -115,6 +118,7 @@ button span {
   list-style: none;
   font-weight: 900;
   font-family: ro;
+  padding: 10px;
 }
 .settings {
   border: none;
@@ -137,7 +141,6 @@ h6 {
   padding: 0;
   margin: 0%;
   width: 100%;
-  height: 10vh;
   background: #ffdd83;
   justify-content: space-evenly;
   align-items: center;
@@ -149,6 +152,9 @@ h6 {
   width: 100%;
   padding: 18px;
   margin: 0%;
+}
+.footer__link img {
+  width: 50px;
 }
 .footer__link:hover {
   background-color: #98dfd6;
